Add Demande de devis, home Done

--- a/maquette/demande-devis.html
+++ b/maquette/demande-devis.html
@@ -32,13 +32,47 @@
   <div class="graphiti"></div>
   <div class="content container">
     <div class="row">
-      <div class="offset2 span4 main-links">
-        <a class="btn btn-lm btn-large btn-block">Contact</a>
-        <a class="btn btn-lm btn-large btn-block">Demandez votre devis</a>
+      <div class="offset1 span6 main-links">
+        <div class="big-box-block">
+          <form>
+          <div class="form-top">
+              <label class="radio inline pull-left">
+                <input type="radio" name="gender" id="gender-mme" value="mme" checked>
+                 Mme
+              </label>
+              <label class="radio inline pull-left">
+                <input type="radio" name="gender" id="gender-m" value="m">
+                M.
+              </label>
+              <select class="">
+                <option>Mise en pages</option>
+                <option>Flyers</option>
+                <option>Cartes événementielles</option>
+                <option>Invitations</option>
+                <option>Modifications de photographies</option>
+                <option>Identités visuelles</option>
+                <option>Affiches</option>
+                <option>Brochures</option>
+                <option>Packagings</option>
+                <option>Chartes graphique</option>
+                <option>Illustrations</option>
+                <option>Signalétique</option>
+              </select>
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input id="email" class="input-block-level" type="text"/>
+            <label for="phone">Telephone</label>
+            <input id="phone" class="input-block-level" type="text"/>
+            <label for="demand">Ma demande</label>
+            <textarea id="demand" class="input-block-level" rows="10"></textarea>
+          </div>
+          </form>
+        </div>
       </div>
-      <div class="offset2 span3">
+      <div class="offset1 span3">
         <div class="black-strip">
-          <div class="content-black-strip">
+          <div class="content-margin">
           <ul>
             <li>Mise en pages</li>
             <li>Flyers</li>
