--- a/maquette/demande-devis.html
+++ b/maquette/demande-devis.html
@@ -44,7 +44,7 @@
                 <input type="radio" name="gender" id="gender-m" value="m">
                 M.
               </label>
-              <select class="">
+              <select name="prestation-select" id="prestation-select">
                 <option>Mise en pages</option>
                 <option>Flyers</option>
                 <option>Cartes événementielles</option>
@@ -73,7 +73,7 @@
       <div class="offset1 span3">
         <div class="black-strip">
           <div class="content-margin">
-          <ul>
+          <ul id="prestation-list">
             <li>Mise en pages</li>
             <li>Flyers</li>
             <li>Cartes événementielles</li>
@@ -93,7 +93,7 @@
     </div>
   </div>
   </div>
-    <!--<script src="http://code.jquery.com/jquery.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>-->
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 </body>
 </html>
