add portefolio page + diverses corrections

--- a/maquette/demande-devis.html
+++ b/maquette/demande-devis.html
@@ -13,10 +13,10 @@
   
   
 <body>
-  <img src="./cote.svgz" alt="" class="decoration-right">
+  <img src="./cote.svg" alt="" class="decoration-right">
     <div class="container">
       <header class="row">
-        <div class="span2 logo"><img src="./logo.svgz" alt="Logo LM Graphic"/></div>
+        <div class="span2 logo"><img src="./logoex1.svg" alt="Logo LM Graphic"/></div>
         <div class="span9 menu-container">
         <div class="row"><div class="offset1 span8 title-container"><h1>LM Graphic</h1></div></div>
         <div class="row">
