--- a/maquette/portefolio.html
+++ b/maquette/portefolio.html
@@ -29,35 +29,26 @@
     </div>
     <!--<img src="./texture-graphiti.svgz" alt="" class="texture-graphiti">-->
   <div class="white-back">
-  <div class="graphiti"></div>
-  <div class="content container">
-    <div class="row">
-      <div class="offset2 span4 main-links">
-        <a class="btn btn-lm btn-large btn-block">Contact</a>
-        <a class="btn btn-lm btn-large btn-block">Demandez votre devis</a>
-      </div>
-      <div class="offset2 span3">
-        <div class="black-strip">
-          <div class="content-black-strip">
-          <ul>
-            <li>Mise en pages</li>
-            <li>Flyers</li>
-            <li>Cartes événementielles</li>
-            <li>Invitations</li>
-            <li>Modifications de photographies</li>
-            <li>Identités visuelles</li>
-            <li>Affiches</li>
-            <li>Brochures</li>
-            <li>Packagings</li>
-            <li>Chartes graphique</li>
-            <li>Illustrations</li>
-            <li>Signalétique</li>
-          </ul>
+    <div class="graphiti"></div>
+    <div class="content container">
+      <div class="row">
+        <div class="offset5 span3">
+          <div class="black-strip">
+            <div class="content-black-strip">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="span12 porte-folio">
+        <img src="./content/pf1.jpg" alt=""/>
+        <img src="./content/pf1.jpg" alt=""/>
+        <img src="./content/pf1.jpg" alt=""/>
+      </div>
+    </div>
   </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
